fix(www): live-component overflow internally

--- a/apps/www/app/_components/live-component/live-component.module.css
+++ b/apps/www/app/_components/live-component/live-component.module.css
@@ -15,6 +15,7 @@
     display: flex;
     gap: var(--ds-size-2);
     flex-wrap: wrap;
+    overflow-x: auto;
     [data-layout='block'] & {
       display: block;
     }
